--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+	<meta charset="utf-8">
+   	<title><%= title %></title>
+    	<link rel='stylesheet' href='/stylesheets/style.css' />
+	<link rel="icon" href="/public/favicon.ico" type="image/x-icon"/>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+	<h1>Bienvenido a <%= title %></h1>
+	<p>El portal donde podrá crear sus propios juegos</p>
+		
+	
   </body>
 </html>
