--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,6 +32,9 @@
 	<footer class="main" id="f1">	
 		<a href="http://es.wikipedia.org/wiki/Quiz"> ¿Qué es un Quiz? </a>
 	</footer>
+	<footer class="main" id="f1">	
+		<a href="https://github.com/borjacore/quiz-2015-bojarnico"> Repositorio git </a>
+	</footer>
 	</div>
 	</body>
 </html>
