--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,7 +22,7 @@
 			</header>
 			<nav class="main" id="n1" role="navigation">
 				<span><a href="/">Inicio</a></span>
-				<span><a href="/quizes/show">Preguntas</a></span>
+				<span><a href="/quizes">Preguntas</a></span>
 				<span><a href="/authors">Autores</a></span>
 			</nav>
 			<section class="main" id="s1">
