--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<meta charset="utf-8">
-   	<title><%= title %></title>
-    	<link rel='stylesheet' href='/stylesheets/style.css' />
-	<link rel="icon" href="/public/favicon.ico" type="image/x-icon"/>
+    <title><%= title %></title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
-	<h1>Bienvenido a <%= title %></h1>
-	<p>El portal donde podrá crear sus propios juegos</p>
-		
-	
+    <h1>Bienvenido a <%= title %></h1>
+    <p>El portal donde podrá crear sus propios juegos!</p>
   </body>
 </html>
