--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  	<head>
-		<meta charset="utf-8">
-   		<title> Preguntas </title>
-    		<link rel='stylesheet' href='/stylesheets/style.css' />
-		<link 	rel='stylesheet'
-			type='text/css'
-			media='only screen and (min-width: 530px) and (min-device-width: 481px)'
-			href='/stylesheets/wide.css' 
-		/>
-		<link 	rel='stylesheet'
-			type='text/css'
-			media='only screen and (max-width: 480px)'
-			href='/stylesheets/smartphone.css' 
-		/>
-	</head>
-	<body>
-		<div id="page-wrap">
-			<header class="main" id="h1">
-				<h2>Quiz<span>: el juego de las preguntas</span></h2>
-			</header>
-			<nav class="main" id="n1" role="navigation">
-				<span><a href="/">Inicio</a></span>
-				<span><a href="/quizes">Preguntas</a></span>
-				<span><a href="/authors">Autores</a></span>
-			</nav>
-			<section class="main" id="s1">
-				<div><%- body %></div>
-			</section>
+  <head>
+    <meta charset="utf-8">
+    <title>Preguntas</title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet'
+	  type='text/css'
+          media='only screen and (min-width: 530px) and (min-device-width: 481px)'
+          href='/stylesheets/wide.css' />
+    <link rel='stylesheet'
+          type='text/css'
+          media='only screen and (max-width: 480px)'
+          href='/stylesheets/smartphone.css' />
+  </head>
+  <body>
+    <div id="page-wrap">
+      <header class="main" id="h1">
+        <h2>Quiz: el juego de las preguntas</h2>
+      </header>
+
+      <nav class="main" id="n1" role="navigation">
+        <span><a href="/">Inicio</a></span>
+        <span><a href="/quizes">Preguntas</a></span>
+      </nav>
+
+      <section class="main" id="s1">
+	<div><%- body %></div>
+      </section>
 	
-	<footer class="main" id="f1">	
-		<a href="http://es.wikipedia.org/wiki/Quiz"> ¿Qué es un Quiz? </a>
-	</footer>
-	<footer class="main" id="f1">	
-		<a href="https://github.com/borjacore/quiz-2015-borjanico"> Repositorio git </a>
-	</footer>
-	</div>
-	</body>
+
+      <footer class="main" id="f1">
+        <a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a>
+      </footer>
+    </div>
+
+  </body>
 </html>
