--- a/views/quizes/question.ejs
+++ b/views/quizes/question.ejs
@@ -9,11 +9,11 @@
   <body>
     <h2>Quiz: el juego de las preguntas</h2>
 
-    <form method="get" action="/quizes/<%= quiz.id %>/answer">
-	Pregunta:<%= quiz.pregunta %> <p>
-	<input type="text" name="respuesta" value="Respuesta"/>
-	<input type="submit" value="Enviar">
+    <form method="get" action="/quizes/answer">
+      Pregunta: <%= pregunta %> <p>
+      <input type="text" name="respuesta" value="Responda aqui"/>
+      <input type="submit" value="Enviar">
+
     </form>
-    
   </body>
 </html>
