--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,6 +22,7 @@
       <nav class="main" id="n1" role="navigation">
         <span><a href="/">Inicio</a></span>
         <span><a href="/quizes">Preguntas</a></span>
+        <span><a href="/authors">Autores</a></span>
       </nav>
 
       <section class="main" id="s1">
@@ -32,6 +33,9 @@
       <footer class="main" id="f1">
         <a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a>
       </footer>
+      <footer class="main" id="f1"> 
+    <a href="https://github.com/borjacore/quiz-2015-borjanico"> Repositorio git </a>
+  </footer>
     </div>
 
   </body>
