--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
     <title>Preguntas</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet'
-	  type='text/css'
+    type='text/css'
           media='only screen and (min-width: 530px) and (min-device-width: 481px)'
           href='/stylesheets/wide.css' />
     <link rel='stylesheet'
@@ -16,6 +16,12 @@
   <body>
     <div id="page-wrap">
       <header class="main" id="h1">
+  <%if(!session.user){%>
+    <span class="right"><a href="/login">Login</a></span>
+  <%}else{%>
+    <span class="right"> <%=session.user.username%><a href="/logout">Logout</a></span>
+  <%}%>
+
         <h2>Quiz: el juego de las preguntas</h2>
       </header>
 
@@ -26,16 +32,23 @@
       </nav>
 
       <section class="main" id="s1">
-	<div><%- body %></div>
+  <% if (errors.length) { %>
+    <span id='ErrorMsgs'>
+      Corregir errores:<br/>
+      <% for(var i in errors) { %>
+        <span> <%= errors[i].message %> </span><br/>
+      <% } %>
+    </span>
+  <% } %>
+
+
+  <div><%- body %></div>
       </section>
-	
+  
 
       <footer class="main" id="f1">
         <a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a>
       </footer>
-      <footer class="main" id="f1"> 
-    <a href="https://github.com/borjacore/quiz-2015-borjanico"> Repositorio git </a>
-  </footer>
     </div>
 
   </body>
