--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -7,9 +7,19 @@
       <input type="submit" value="Buscar">
     </form>
     <table>
-	<% var i; for(i=0; i < quizes.length; i++){ %>	
-			<tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
-	<% } %>
+  <% var i; for(i=0; i < quizes.length; i++){ %>  
+    <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
+    <td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
+    <td>
+      <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+        <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+          borrar
+        </button>
+      </form>
+    </td>
+    </tr>
+  <% } %>
     </table>
+    <a href="/quizes/new"><button type="button">Crear pregunta</button></a>
   </body>
 </html>
