--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
     <title>Preguntas</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet'
-    type='text/css'
+	  type='text/css'
           media='only screen and (min-width: 530px) and (min-device-width: 481px)'
           href='/stylesheets/wide.css' />
     <link rel='stylesheet'
@@ -44,11 +44,14 @@
 
   <div><%- body %></div>
       </section>
-  
+	
 
       <footer class="main" id="f1">
         <a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a>
       </footer>
+      <footer class="main" id="f1"> 
+    <a href="https://github.com/borjacore/quiz-2015-borjanico"> Repositorio git </a>
+  </footer>
     </div>
 
   </body>
